@@ -1710,6 +1710,13 @@ Options:
   administer his room). By sending a message to the service JID,
   administrators can send service messages that will be displayed in every
   active room.
+
+  \titem{history\_size} \ind{options!history\_size}a small history of the
+  current discussion is send to users when they enter the room. This option make
+  it possible to define the number of history messages to keep and send to the
+  user joining the room. The value is a integer. Setting the value to \term{0}
+  disable the history feature and nothing is kept in memory. The default value
+  is \term{20}. This value is global and affects all MUC rooms on the server.
 \end{description}
 
 Examples:
@@ -1721,7 +1728,8 @@ Examples:
   sends a message such as ``Tomorrow, the \Jabber{} server will be moved
   to new hardware. This will involve service breakdowns around 23:00 UMT.
   We apologise for this inconvenience.'' to \jid{conference.example.org},
-  it will be displayed in all active rooms.
+  it will be displayed in all active rooms. In this example the history
+  feature is disabled.
   \begin{verbatim}
   {acl, admins, {user, "admin", "example.org"}}.
   ...
@@ -1732,7 +1740,8 @@ Examples:
     ...
     {mod_muc, [{access, all},
                {access_create, all},
-               {access_admin, muc_admins}]},
+               {access_admin, muc_admins},
+               {history_size, 0}]},
     ...
    ]}.
 \end{verbatim}
@@ -1743,7 +1752,9 @@ Examples:
   \jid{admin@example.org} sends a message such as ``Tomorrow, the \Jabber{}
   server will be moved to new hardware. This will involve service breakdowns
   around 23:00 UMT. We apologise for this inconvenience.'' to
-  \jid{conference.example.org}, it will be displayed in all active rooms.
+  \jid{conference.example.org}, it will be displayed in all active rooms. No
+  \term{history\_size} option is used, this means that the feature is enabled
+  and the default value of 20 history messages will be send to the users.
   \begin{verbatim}
   {acl, paying_customers, {user, "customer1", "example.net"}}.
   {acl, paying_customers, {user, "customer2", "example.com"}}.
