@@ -1,3 +1,12 @@
+2006-09-05  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/mod_muc/mod_muc.erl: It is now possible to configure the MUC room
+	history feature. A new option has been added in ejabberd muc module
+	configuration (history_size) to define the size of the history. 0 is
+        used to disable the feature.
+	* src/mod_muc/mod_muc_room.erl: Likewise.
+	* doc/guide.tex: Likewise.
+
 2006-09-05  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/ejabberd_socket.erl: All XML socket operations moved here
